@@ -18,6 +18,7 @@ Other features
  * Combine flake8 configurations (Sergey Fedoseev)
  * Improved diffing behavior for text fields (Aliosha Padovani)
  * Improve contrast of disabled inputs (Nick Smith)
+ * Added ``get_document_model_string`` function (WinterComes)
 
 
 Bug fixes
@@ -27,6 +28,7 @@ Bug fixes
  * Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
  * Unbundle the l18n library as it was bundled to avoid installation errors which have been resolved (Matt Westcott)
  * Prevent error when comparing pages that reference a model with a custom primary key (Fidel Ramos)
+ * Moved ``get_document_model`` location so it can be imported when Models are not yet loaded (WinterComes)
 
 
 Upgrade considerations
@@ -36,3 +38,9 @@ Removed support for Django 2.0
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Django 2.0 is no longer supported as of this release; please upgrade to Django 2.1 or above before upgrading Wagtail.
+
+
+``wagtail.documents.models.get_document_model`` has moved
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+The ``get_document_model`` function should now be imported from ``wagtail.documents`` rather than ``wagtail.documents.models``. See :ref:`custom_document_model`.
