@@ -6,7 +6,7 @@ from django.utils.translation import ugettext_lazy as _
 
 from wagtail.admin.staticfiles import versioned_static
 from wagtail.admin.widgets import AdminChooser
-from wagtail.documents.models import get_document_model
+from wagtail.documents import get_document_model
 
 
 class AdminDocumentChooser(AdminChooser):
